objects/SMAX_PS_Additional_Questions_Criteria__c.object
<CustomObject>
    <label>Additional Questions Criteria</label>
    <nameField>
        <label>Additional Questions Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Questions Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Code_Group__c</fullName>
        <description>Code Group</description>
        <inlineHelpText>Code Group</inlineHelpText>
        <label>Code Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Billing_Type__c</fullName>
        <description>Billing Type</description>
        <inlineHelpText>Billing Type</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZM01</fullName>
                    <label>Contract</label>
                </value>
                <value>
                    <fullName>ZM04</fullName>
                    <label>Installation</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Type__c</fullName>
        <description>Service Contract Type</description>
        <inlineHelpText>Service Contract Type</inlineHelpText>
        <label>Service Contract Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>